# skelecode

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  diagram.md
.cargo/: config.toml
.claude/: settings.json  settings.local.json
docs/: README.md  alias-system.md  architecture.md  call-resolution.md  cli.md  obsidian-migration.md  output-formats.md  plan.md
src/: lib.rs  main.rs
src/ir/: mod.rs
src/parser/: java.rs  jsts.rs  kotlin.rs  mod.rs  python.rs  rust.rs
src/renderer/: canvas.rs  machine.rs  mermaid.rs  mod.rs  obsidian.rs
src/resolver/: mod.rs
src/tui/: app.rs  export.rs  mod.rs  ui.rs  welcome.rs
