[package]
name = "skelecode"
version = "1.0.0"
edition = "2024"
description = "Code structure scanner that generates project-wide context graphs for humans and AI"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
tree-sitter = "0.26.8"
tree-sitter-rust = "0.24.2"
walkdir = "2.5.0"
ratatui = "0.30.0"
crossterm = "0.29.0"
tree-sitter-java = "0.23.5"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
arboard = "3"
